--- a/pll1.cmp
+++ b/pll1.cmp
@@ -20,6 +20,7 @@ component pll1
 		inclk0		: IN STD_LOGIC  := '0';
 		c0		: OUT STD_LOGIC ;
 		c1		: OUT STD_LOGIC ;
-		c2		: OUT STD_LOGIC 
+		c2		: OUT STD_LOGIC ;
+		c3		: OUT STD_LOGIC 
 	);
 end component;
